objects/Vosf_Question_Column__c.object
<CustomObject>
    <fields>
        <fullName>Column_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>Column Ext ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Total_Validation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Total Validation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Total_Value__c</fullName>
        <label>Max Total Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Question Columns</relationshipLabel>
        <relationshipName>Question_Columns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required_Total__c</fullName>
        <label>Required Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Sum__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Sum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Combobox</fullName>
                </value>
                <value>
                    <fullName>Unselect Row</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>daysOnRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Total days spent on Recurring Activities : [Calculated value: (365 days - total number of days spent on periodic activities)]</description>
        <label>daysOnRecurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hideColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hideColumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>percentOfPeriodicActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>percentOfPeriodicActivities</label>
        <type>Checkbox</type>
    </fields>
    <label>Question Column</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>